Add weighted graphs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "const_graphs"
-version = "0.1.1"
+version = "0.2.1"
 edition = "2021"
 license = "LGPL-2.1"
-description = "Blazingly-fast compile-time const-fns copy-free unweighted graph library"
+description = "Blazingly-fast compile-time copy-free graph library"
 repository = "https://github.com/TiagoCavalcante/const_graphs"
