--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Install nightly toolchain
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: nightly
+        override: true
+
     - name: Test debug mode
       run: cargo test
     - name: Test release mode
